--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <a href="hhttps://www.figma.com/file/PNZZ0VFxdBuHjsGoReNZgW/AstroTechlabs-LandingPage-V1?node-id=0%3A1" target="_blank">Project 1</a>
 
-        <a href="https://www.figma.com/file/32Znr0O7zEbYtycidZVNnd/AstroTechlabs-Reports-Page-V1?node-id=0%3A1" target="_blank">hProject 2</a>
+        <a href="https://www.figma.com/file/32Znr0O7zEbYtycidZVNnd/AstroTechlabs-Reports-Page-V1?node-id=0%3A1" target="_blank">Project 2</a>
         
 
 
