--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 5em 0 8em;
+            padding: 5em 2em 8em 2em;
         }
 
         h2{
