--- a/devotional-india/index.html
+++ b/devotional-india/index.html
@@ -52,10 +52,10 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-          <img src="assets/images/left-3712d0818899317db6b398980aa3ed38.png" alt="">
+          <img class="img-fluid" src="assets/images/left-3712d0818899317db6b398980aa3ed38.png" alt="">
         </div>
         <div class="col text-center">
-         <img src="assets/images/right-8ab75903894d0b74e30f2652a5e80d42.png" alt="">
+         <img class="img-fluid" src="assets/images/right-8ab75903894d0b74e30f2652a5e80d42.png" alt="">
         </div>
       </div>
 
