--- a/devotional-india/index.html
+++ b/devotional-india/index.html
@@ -49,6 +49,8 @@
   
   <div id="content" class="content">
 
+    <div class="overlay"></div>
+
     <div class="container">
       <div class="row">
         <div class="col text-center">
