--- a/graphic-design.html
+++ b/graphic-design.html
@@ -203,7 +203,7 @@
 
 <div style="clear:both;"></div>
     </div>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js'></script>
 <script>
 
