--- a/graphic-design.html
+++ b/graphic-design.html
@@ -165,6 +165,14 @@
 <!-- ---- videos -->
 
 <div class="tile scale-anm videos" >
+
+   <video width="320" controls>
+    <source src="img/videos/reel (1).mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
+</div>
+
+<div class="tile scale-anm videos" >
     <iframe width="350" height="315" src="https://www.youtube.com/embed/x_GJavMCjRQ?si=pRVvUx__1Bpoa015" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
@@ -194,7 +202,13 @@
 </div>
 
 
+<div class="tile scale-anm videos" >
 
+    <video width="320" controls>
+     <source src="img/videos/reel.mp4" type="video/mp4">
+   Your browser does not support the video tag.
+   </video>
+ </div>
 
 
 
