--- a/graphic-design.html
+++ b/graphic-design.html
@@ -34,6 +34,13 @@
 <div id="portfolio"> 
 
 <!-- ---- web design -->
+
+<div class="tile scale-anm web-designs" >
+    <a href="img/web-designs/AstroTechlabs-LandingPage-V1.jpg" target="_blank"><img src="img/web-designs/AstroTechlabs-LandingPage-V1.jpg" alt="click to view larger" /></a>
+</div>
+
+
+
     <div class="tile scale-anm web-designs" >
         <a href="img/web-designs/0223.jpg" target="_blank"><img src="img/web-designs/0223.jpg" alt="click to view larger" /></a>
     </div>
@@ -62,9 +69,25 @@
     <div class="tile scale-anm web-designs" >
         <a href="img/web-designs/mapmystudy_layout.jpg" target="_blank"><img src="img/web-designs/mapmystudy_layout.jpg" alt="click to view larger" /></a>
     </div>
+
+    <div class="tile scale-anm web-designs" >
+        <a href="img/web-designs/latest_v1.jpg" target="_blank"><img src="img/web-designs/latest_v1.jpg" alt="click to view larger" /></a>
+    </div>
     
 
 <!-- ---- banners -->
+<div class="tile scale-anm banners" >
+    <a href="img/banners/Instagram post - 7 (3).png" target="_blank"><img src="img/banners/Instagram post - 7 (3).png" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm banners" >
+    <a href="img/banners/Elevate-Your-Career.jpg" target="_blank"><img src="img/banners/Elevate-Your-Career.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm banners" >
+    <a href="img/banners/Carousel post/01/02.jpg" target="_blank"><img src="img/banners/Carousel post/01/02.jpg" alt="click to view larger" /></a>
+</div>
+
 
 <div class="tile scale-anm banners" >
     <a href="img/banners/22.jpg" target="_blank"><img src="img/banners/22.jpg" alt="click to view larger" /></a>
@@ -76,6 +99,14 @@
 
 <div class="tile scale-anm banners" >
     <a href="img/banners/44.jpg" target="_blank"><img src="img/banners/44.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm banners" >
+    <a href="img/banners/Mastering-Business-Dynamics.jpg" target="_blank"><img src="img/banners/Mastering-Business-Dynamics.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm banners" >
+    <a href="img/banners/Embark-on-a-Hospitality.jpg" target="_blank"><img src="img/banners/Embark-on-a-Hospitality.jpg" alt="click to view larger" /></a>
 </div>
 
 <div class="tile scale-anm banners" >
@@ -122,14 +153,12 @@
     <a href="img/mailers/06.jpg" target="_blank"><img src="img/mailers/06.jpg" alt="click to view larger" /></a>
 </div>
 
+
 <div class="tile scale-anm mailers" >
-    <a href="img/mailers/07.jpg" target="_blank"><img src="img/mailers/07.jpg" alt="click to view larger" /></a>
+    <a href="img/mailers/index_v2.jpg" target="_blank"><img src="img/mailers/index_v2.jpg" alt="click to view larger" /></a>
 </div>
 
 
-<div class="tile scale-anm mailers" >
-    <a href="img/mailers/08.jpg" target="_blank"><img src="img/mailers/08.jpg" alt="click to view larger" /></a>
-</div>
 
 <div class="tile scale-anm mailers" >
     <a href="img/mailers/index_v7.jpg" target="_blank"><img src="img/mailers/index_v7.jpg" alt="click to view larger" /></a>
@@ -137,6 +166,14 @@
 
 <div class="tile scale-anm mailers" >
     <a href="img/mailers/index_v9.jpg" target="_blank"><img src="img/mailers/index_v9.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm mailers" >
+    <a href="img/mailers/index_v1.jpg" target="_blank"><img src="img/mailers/index_v9.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm mailers" >
+    <a href="img/mailers/07.jpg" target="_blank"><img src="img/mailers/07.jpg" alt="click to view larger" /></a>
 </div>
 
 
