--- a/graphic-design.html
+++ b/graphic-design.html
@@ -13,7 +13,7 @@
         <a href="https://harpreetprojects.github.io/portfolio/">< Back</a>
 
     <h1>Portfolio - Graphic Design</h1>
-    <p><b>DESIGN SKILLS</b>: Photoshop, Premiere Pro, InDesign, Figma, Corel Draw, Canva, CapCut</p>>
+    <p><b>DESIGN SKILLS</b>: Photoshop, Premiere Pro, InDesign, Figma, Corel Draw, Canva, CapCut</p>
     <p><a href="https://www.behance.net/harrysingh108" target="_blank">Behance</a></p>
     <p><a href="https://drive.google.com/drive/folders/1vwydFoa7kZ3RvHp5DSGdlkhrZm2auf8o?usp=drive_link" target="_blank">My Google Drive</a></p>
     
