--- a/web-development.html
+++ b/web-development.html
@@ -50,6 +50,10 @@
 
 <h2>WordPress Projects</h2>
 
+<p><a href="https://ansjourneys.com/" target="_blank">https://ansjourneys.com/</a></p>
+        
+<p><a href="https://thedivergentslp.com/" target="_blank">https://thedivergentslp.com/</a></p>
+
 <p><a href="https://kalendingsolutions.com/" target="_blank">https://kalendingsolutions.com/</a></p>
 
 <p><a href="https://uksm.org.uk/" target="_blank">https://uksm.org.uk/</a></p>
@@ -58,7 +62,6 @@
 
 <p><a href="https://shortcourses.lsib.co.uk" target="_blank">https://shortcourses.lsib.co.uk</a></p>
 
-<p><a href="https://kartfare.com/" target="_blank">https://kartfare.com/</a></p>
 
 
 <h2>Websites built on the .NET platform</h2>
@@ -76,4 +79,5 @@
 
     
 </body>
+
 </html>
