--- a/index.html
+++ b/index.html
@@ -35,17 +35,13 @@
 <div id="portfolio"> 
 
 
-    <div class="tile scale-anm banners" >
-    <a href="img/design-001.jpg" target="_blank"><img src="img/design-001.jpg" alt="click to view larger" /></a>
-</div>
-
-<div class="tile scale-anm banners" >
-    <a href="img/design-002.jpg" target="_blank"><img src="img/design-002.jpg" alt="click to view larger" /></a>
-</div>
+  
 
 <div class="tile scale-anm banners" >
     <a href="img/design-003.jpg" target="_blank"><img src="img/design-003.jpg" alt="click to view larger" /></a>
 </div>
+
+
 
 <div class="tile scale-anm banners" >
     <a href="img/design-004.jpg" target="_blank"><img src="img/design-004.jpg" alt="click to view larger" /></a>
@@ -55,9 +51,7 @@
     <a href="img/design-005.jpg" target="_blank"><img src="img/design-005.jpg" alt="click to view larger" /></a>
 </div>
 
-<div class="tile scale-anm banners" >
-    <a href="img/design-006.jpg" target="_blank"><img src="img/design-006.jpg" alt="click to view larger" /></a>
-</div>
+
 
 <!-- ---- web design -->
  
@@ -97,9 +91,9 @@
         <a href="img/web-designs/mapmystudy_layout.jpg" target="_blank"><img src="img/web-designs/mapmystudy_layout.jpg" alt="click to view larger" /></a>
     </div>
 
-    <div class="tile scale-anm web-designs" >
+    <!-- <div class="tile scale-anm web-designs" >
         <a href="img/web-designs/latest_v1.jpg" target="_blank"><img src="img/web-designs/latest_v1.jpg" alt="click to view larger" /></a>
-    </div>
+    </div> -->
     
 
 <!-- ---- banners -->
@@ -170,15 +164,27 @@
 
 <!-- ---- mailers -->
 
+  <div class="tile scale-anm mailers" >
+    <a href="img/design-001.jpg" target="_blank"><img src="img/design-001.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm mailers" >
+    <a href="img/design-002.jpg" target="_blank"><img src="img/design-002.jpg" alt="click to view larger" /></a>
+</div>
+
+<div class="tile scale-anm mailers" >
+    <a href="img/design-006.jpg" target="_blank"><img src="img/design-006.jpg" alt="click to view larger" /></a>
+</div>
+
 <div class="tile scale-anm mailers" >
     <a href="img/mailers/Final Version.jpg" target="_blank"><img src="img/mailers/Final Version.jpg" alt="click to view larger" /></a>
 </div>
 
 
 
-<div class="tile scale-anm mailers" >
+<!-- <div class="tile scale-anm mailers" >
     <a href="img/mailers/06.jpg" target="_blank"><img src="img/mailers/06.jpg" alt="click to view larger" /></a>
-</div>
+</div> -->
 
 
 <div class="tile scale-anm mailers" >
@@ -191,7 +197,10 @@
     <a href="img/mailers/index_v7.jpg" target="_blank"><img src="img/mailers/index_v7.jpg" alt="click to view larger" /></a>
 </div>
 
-<div class="tile scale-anm mailers" >
+
+
+
+<!-- <div class="tile scale-anm mailers" >
     <a href="img/mailers/index_v9.jpg" target="_blank"><img src="img/mailers/index_v9.jpg" alt="click to view larger" /></a>
 </div>
 
@@ -201,7 +210,7 @@
 
 <div class="tile scale-anm mailers" >
     <a href="img/mailers/07.jpg" target="_blank"><img src="img/mailers/07.jpg" alt="click to view larger" /></a>
-</div>
+</div> -->
 
 
 <!-- ---- brochures -->
