--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <a href="https://harpreetprojects.github.io/portfolio/">< Back</a>
+        <!-- <a href="https://harpreetprojects.github.io/portfolio/">< Back</a> -->
 
     <h1>Portfolio </h1>
     <!-- <p><b>DESIGN SKILLS</b>: Photoshop, Premiere Pro, InDesign, Figma, Corel Draw, Canva, CapCut</p> -->
