--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
 
 <!-- ---- videos -->
 
+
+    <div class="tile scale-anm videos" >
+
+   <video width="320" controls>
+    <source src=" https://drive.google.com/file/d/1xGMbScNw0kSQM_ZlLVIgcUEsETSM6SIB/view?usp=sharing" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
+</div>
+
 <div class="tile scale-anm videos" >
 
    <video width="320" controls>
@@ -245,7 +254,10 @@
   </video>
 </div>
 
-<div class="tile scale-anm videos" >
+
+   
+
+<!-- <div class="tile scale-anm videos" >
     <iframe width="350" height="315" src="https://www.youtube.com/embed/x_GJavMCjRQ?si=pRVvUx__1Bpoa015" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
@@ -272,7 +284,7 @@
 
 <div class="tile scale-anm videos" >
     <iframe width="350" height="315" src="https://www.youtube.com/embed/kd2B78Jz31Y?si=N68m5odqJJYIN9W4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+</div> -->
 
 
 <div class="tile scale-anm videos" >
@@ -314,3 +326,4 @@ jQuery('#portfolio').mixItUp({
 
 </body>
 </html>
+
