--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
 
     <div class="tile scale-anm videos" >
 
-   <video width="320" controls>
-    <source src=" https://drive.google.com/file/d/1xGMbScNw0kSQM_ZlLVIgcUEsETSM6SIB/view?usp=sharing" type="video/mp4">
-  Your browser does not support the video tag.
-  </video>
-</div>
+    <video width="320" controls>
+     <source src="img/videos/reel.mp4" type="video/mp4">
+   Your browser does not support the video tag.
+   </video>
+ </div>
 
 <div class="tile scale-anm videos" >
 
@@ -252,6 +252,17 @@
     <source src="img/videos/reel (1).mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
+</div>
+
+    <div class="tile scale-anm videos" >
+
+   
+<p><a href="https://drive.google.com/file/d/1L3yu060Eauu2Bw6_QTLpjf6KSZmnW7CQ/view?usp=sharing
+" target="_blank">video 1</a></p>
+<p><a href="https://drive.google.com/file/d/135HgVZWhvomUozgxT0qcm4ejgu5a9vDx/view?usp=sharing" target="_blank">video 2</a></p>
+<p><a href="https://drive.google.com/file/d/1DJ6mQlGP5J8nsAVYiwKNQfZRSJf9tnP2/view?usp=sharing" target="_blank">video 3</a></p>
+<p><a href="https://drive.google.com/file/d/1FUuF0NuZyeaIs6zbNz01169-2hMzzh__/view?usp=sharing" target="_blank">video 4</a></p>
+<p><a href="https://drive.google.com/file/d/1xGMbScNw0kSQM_ZlLVIgcUEsETSM6SIB/view?usp=sharing" target="_blank">video 5</a></p>
 </div>
 
 
@@ -287,13 +298,7 @@
 </div> -->
 
 
-<div class="tile scale-anm videos" >
 
-    <video width="320" controls>
-     <source src="img/videos/reel.mp4" type="video/mp4">
-   Your browser does not support the video tag.
-   </video>
- </div>
 
 
 
@@ -326,4 +331,5 @@ jQuery('#portfolio').mixItUp({
 
 </body>
 </html>
+
 
