--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!-- <a href="https://harpreetprojects.github.io/portfolio/">< Back</a> -->
 
     <h1>Portfolio </h1>
-    <!-- <p><b>DESIGN SKILLS</b>: Photoshop, Premiere Pro, InDesign, Figma, Corel Draw, Canva, CapCut</p> -->
+    <!-- <p><b>DESIGN SKILLS</b>: Photoshop, InDesign, Premiere Pro, Canva, CapCut</p> -->
     <p><a href="https://www.behance.net/harrysingh108" target="_blank">Behance</a></p>
     <p><a href="https://drive.google.com/drive/folders/1vwydFoa7kZ3RvHp5DSGdlkhrZm2auf8o?usp=drive_link" target="_blank">My Google Drive</a></p>
-    <p><a href="https://harpreetprojects.github.io/portfolio/web-development.html" target="_blank">Web Development</a></p>
+    <p><a href="https://harpreetprojects.github.io/portfolio/web-development.html" >Web Development</a></p>
 
 <br>
 <div id="filters" class="toolbar mb2 mt2">
@@ -254,14 +254,16 @@
   </video>
 </div>
 
-    <div class="tile scale-anm videos" >
+    <div class="tile scale-anm videos" style="border:0">
 
-   
+        <h3>Click here to view videos</h3>
+
+   <p><a href="https://drive.google.com/file/d/1FUuF0NuZyeaIs6zbNz01169-2hMzzh__/view?usp=sharing" target="_blank">video 1</a></p>
 <p><a href="https://drive.google.com/file/d/1L3yu060Eauu2Bw6_QTLpjf6KSZmnW7CQ/view?usp=sharing
-" target="_blank">video 1</a></p>
-<p><a href="https://drive.google.com/file/d/135HgVZWhvomUozgxT0qcm4ejgu5a9vDx/view?usp=sharing" target="_blank">video 2</a></p>
-<p><a href="https://drive.google.com/file/d/1DJ6mQlGP5J8nsAVYiwKNQfZRSJf9tnP2/view?usp=sharing" target="_blank">video 3</a></p>
-<p><a href="https://drive.google.com/file/d/1FUuF0NuZyeaIs6zbNz01169-2hMzzh__/view?usp=sharing" target="_blank">video 4</a></p>
+" target="_blank">video 2</a></p>
+<p><a href="https://drive.google.com/file/d/135HgVZWhvomUozgxT0qcm4ejgu5a9vDx/view?usp=sharing" target="_blank">video 3</a></p>
+<p><a href="https://drive.google.com/file/d/1DJ6mQlGP5J8nsAVYiwKNQfZRSJf9tnP2/view?usp=sharing" target="_blank">video 4</a></p>
+
 <p><a href="https://drive.google.com/file/d/1xGMbScNw0kSQM_ZlLVIgcUEsETSM6SIB/view?usp=sharing" target="_blank">video 5</a></p>
 </div>
 
@@ -331,5 +333,6 @@ jQuery('#portfolio').mixItUp({
 
 </body>
 </html>
+
 
 
